# waas

./: Cargo.toml  DEMO.md  IMPLEMENTATION_REPORT.md  README.md  cert.pem  hd_keys.json  key.pem  keygen_essentials.json  keygen_result.json  test_storage_optimization.sh
src/: auxinfo.rs  dashboard.rs  delete_key.rs  hd_keys.rs  keygen.rs  logging.rs  main.rs  presign.rs  sign.rs  tshare.rs
src/static/: index.html
