[package]
name = "waas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
serde = { version = "1.0.227", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
